// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Telemetry Collection: Get Aggregated Stats OSS-like telemetry (no license nor X-Pack telemetry) 1`] = `
Array [
  Object {
    "cluster_name": "test",
    "cluster_stats": Object {},
    "cluster_uuid": "test",
    "collection": "local",
    "stack_stats": Object {
      "kibana": Object {
        "count": 1,
        "great": "googlymoogly",
        "indices": 1,
        "os": Object {
          "platformReleases": Array [
            Object {
              "count": 1,
              "platformRelease": "iv",
            },
          ],
          "platforms": Array [
            Object {
              "count": 1,
              "platform": "rocky",
            },
          ],
        },
        "plugins": Object {
          "clouds": Object {
            "chances": 95,
          },
          "localization": Object {
            "integrities": Object {},
            "labelsCount": 0,
            "locale": "en",
          },
          "rain": Object {
            "chances": 2,
          },
          "snow": Object {
            "chances": 0,
          },
          "sun": Object {
            "chances": 5,
          },
        },
        "versions": Array [
          Object {
            "count": 1,
            "version": "8675309",
          },
        ],
      },
    },
    "version": "8.0.0",
  },
]
`;

exports[`Telemetry Collection: Get Aggregated Stats X-Pack telemetry (license + X-Pack) 1`] = `
Array [
  Object {
    "cluster_name": "test",
    "cluster_stats": Object {},
    "cluster_uuid": "test",
    "collection": "local",
    "stack_stats": Object {
      "kibana": Object {
        "count": 1,
        "great": "googlymoogly",
        "indices": 1,
        "os": Object {
          "platformReleases": Array [
            Object {
              "count": 1,
              "platformRelease": "iv",
            },
          ],
          "platforms": Array [
            Object {
              "count": 1,
              "platform": "rocky",
            },
          ],
        },
        "plugins": Object {
          "clouds": Object {
            "chances": 95,
          },
          "localization": Object {
            "integrities": Object {},
            "labelsCount": 0,
            "locale": "en",
          },
          "rain": Object {
            "chances": 2,
          },
          "snow": Object {
            "chances": 0,
          },
          "sun": Object {
            "chances": 5,
          },
        },
        "versions": Array [
          Object {
            "count": 1,
            "version": "8675309",
          },
        ],
      },
      "xpack": Object {},
    },
    "version": "8.0.0",
  },
]
`;
